--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -9,7 +9,7 @@ file(GLOB LITE_PHYSICS_MATH_SRC ${CMAKE_CURRENT_SOURCE_DIR}/Math/*.cpp)
 file(GLOB LITE_PHYSICS_MATH_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/Math/*.h)
 
 add_library(lite-physics STATIC ${LITE_PHYSICS_SRC} ${LITE_PHYSICS_HEADER} 
-    ${LITE_PHYSICS_MATH_HEADER} ${LITE_PHYSICS_MATH_HEADER} )
+    ${LITE_PHYSICS_MATH_HEADER} ${LITE_PHYSICS_MATH_HEADER} ${LITE_PHYSICS_MATH_SRC} )
 
 target_include_directories(lite-physics PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR} )
