--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -44,7 +44,7 @@ if(LITE_PHYSICS_ENABLE_RENDERING)
     add_compile_definitions(LITE_PHYSICS_RENDERER_SHADER_DIR="${CMAKE_SOURCE_DIR}/data/shaders/spirv")
     
 
-    set(apps basic ccd multi)
+    set(apps basic ccd multi convex)
 
     foreach(app ${apps})
         message(STATUS "adding app ${app}...")
